Remoção pasta images

--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
     <div class="fundo">
         <div class="name">
             <h1>João Vitor da Silva</h1>
-            <img src="./images/ifc2.png" alt="IFC" srcset="">
+            <img src="ifc2.png" alt="IFC" srcset="">
         </div>
         <div class="calculadora">
             <h2>Calculadora</i></h2>
